add styles and hot desserts

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,6 @@
       href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
@@ -78,7 +77,7 @@
             </h1>
             <p class="article__item__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
               Illum, sint. Fugit fuga corporis aliquid molestias iusto odio rem alias
-
+              <br></br>
              <button class="article__item__button" type="button">Visit Our Menu</button> 
           </div>
 
@@ -90,8 +89,43 @@
           </figure>
         </article>
       </section>
+
+      <section class="container-fluid hot-desserts">
+        <span>HOT DESSERTS</span>
+        <span>holas</span>
+        <br>
+        <article class="hot-desserts-container grid">
+          <div class="dessert container-fluid col-md-3">
+            <img src="" alt="dessert-icon">
+            <h5>Dessert name</h5>
+            <p>price</p>
+            <button>+</button>
+          </div>
+          <div class="dessert container-fluid col-md-3">
+            <img src="" alt="dessert-icon">
+            <h5>Dessert name</h5>
+            <p>price</p>
+            <button>+</button>
+          </div>
+          <div class="dessert container-fluid col-md-3">
+            <img src="" alt="dessert-icon">
+            <h5>Dessert name</h5>
+            <p>price</p>
+            <button>+</button>
+          </div>
+          <div class="dessert container-fluid col-md-3">
+            <img src="" alt="dessert-icon">
+            <h5>Dessert name</h5>
+            <p>price</p>
+            <button>+</button>
+          </div>
+        </article>
+        <br>
+        
+      </section>
     </main>
 
     <footer></footer>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
